--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="card">
         <img class="propic" src="https://s3-alpha-sig.figma.com/img/25e0/f7da/ba9bbf242460f04a57196e93d54e0943?Expires=1709510400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=a3GGEaR2rEzXME2wSBorD4nUlH9gC4ulNjhuIZor67QqEYMkpNnw7vHfsgsx8goYso57t0syLJ2PDGFOQC7Pk2k7lXeRldZ3Z7S0UyLnt6CgrtRxd1KHIaJo~4aHVNNrldrj04rSTq576WslNzLC4ssJhlGpD9axcewCJ9c-OVMwcxDuXRRJWstKAftLfbyE7THBy7sQcOO2pb7N6PNYYnwqSSnMlLJ96sDkXd7lIkDu~5MAKnKYvZZjlf4ETiI10~24AtNM9xUvYBSInQBM5mwPUzlkMJ046fzXLSLA4SDgPWaMfjIe6x2k8vsa62roLwqEks6RH0JsXaofPhtPmg__" alt="John Doe">
         <h2>John Doe</h2>
-        <h3>Chief executive manager</h3>
+        <h3>Chief Executive Manager</h3>
             <img class="social-link" src="https://s3-alpha-sig.figma.com/img/4faf/d84c/293b35a8b571a0a44098f53606a42816?Expires=1709510400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OjaRFjzHWMEB6CFE4rxiV0FxTmyw1O6wRuTFzsKmVFUTIxuu1dAw5XlhZGJBQUuWClmOu3HAR6nX2NoggHld~DrRvA8ugY7nqG3-jJI9HKEYswG-NBu-jP2CZys7KC1yV~-VVxKE6CYbcMHQo3qDc2vjMUXHneG~nirleSTn5PJCMuq2fw4Ddz3PpXCgAz~e2RKuR3TO8oPpa8dPDSk63dKtqXF58tA40M3XDQWTVwO8tnivXW3vd-wDTZ0dU~FICg8oQA6eFZ0xDXMY2QHQQXMcbJWaKlg8Oglr~y14qoZDQIiJrlstL-UlNiPoaPb0saqP9Hm90WqbaGOyZm258g__" alt="WhatsApp">
             <img class="social-link2" src="https://s3-alpha-sig.figma.com/img/5b5a/8b93/a5fbb42e501044357406a9b5bde9dcb1?Expires=1709510400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=V80HbvBEi-6PjOBOApTchF0Ir~g6cMDPdopGShdTD2JqAX1HocLbj7caolH1COrDf98uk5OF55dnNz6lpPH6SB-lXAJpkPjR4CAUf-bYnk~xWITH7dtZMWlfmuxBYrEwNC8dTWNNPvqBA9JqJBP1FvysJvyyxUwr2gvoYG9FVFN18kVcfYjPRDhfBks3p36QxT-8~SF89Egxht60-UNebOzH8Iad9ZagylU1C8yjnfF1n1MLfqsii9Hn4Y1TK1ajuRDzX-nSG~IH7iXKtz3BwORvcvutx78rY8ecpLDN~3J0V3JURz3GkJ5TEUgF51i-R7NgPJfng1W70OvcwVRxGQ__" alt="Linkedin">
     </div>
